--- a/.github/workflows/build_mx4300_nss.yml
+++ b/.github/workflows/build_mx4300_nss.yml
@@ -5,7 +5,7 @@ on: workflow_dispatch
 jobs:
     build:
         name: nss build with kmod
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-24.04
         permissions:
             contents: write
         steps:
@@ -25,7 +25,6 @@ jobs:
                       git \
                       libncurses-dev \
                       libssl-dev \
-                      python3-distutils \
                       rsync \
                       unzip \
                       zlib1g-dev \
