Set all workflows to trigger on workflow_dispatch

--- a/.github/workflows/coverity.yml
+++ b/.github/workflows/coverity.yml
@@ -1,8 +1,6 @@
 name: Coverity scan build
 
-on:
-  schedule:
-    - cron: '30 2 * * 6'
+on: workflow_dispatch
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
