--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -1,24 +1,6 @@
 name: Build all core packages
 
-on:
-  pull_request:
-    paths:
-      - '.github/workflows/packages.yml'
-      - 'config/**'
-      - 'include/**'
-      - 'package/**'
-      - 'target/linux/generic/**'
-      - 'toolchain/**'
-  push:
-    paths:
-      - '.github/workflows/packages.yml'
-      - 'config/**'
-      - 'include/**'
-      - 'package/**'
-      - 'target/linux/generic/**'
-      - 'toolchain/**'
-    branches-ignore:
-      - master
+on: workflow_dispatch
 
 permissions:
   contents: read
