--- a/.github/workflows/label-kernel.yml
+++ b/.github/workflows/label-kernel.yml
@@ -1,10 +1,7 @@
 # ci:kernel:x86:64 is going to trigger CI kernel check jobs for x86/64 target
 
 name: Build kernel and check patches for target specified in labels
-on:
-  pull_request:
-    types:
-      - labeled
+on: workflow_dispatch
 
 jobs:
   build-kernels-label:
