--- a/.github/workflows/label-target.yml
+++ b/.github/workflows/label-target.yml
@@ -1,10 +1,7 @@
 # ci:target:x86:64 is going to trigger CI target check jobs for x86/64 target
 
 name: Build check target specified in labels
-on:
-  pull_request:
-    types:
-      - labeled
+on: workflow_dispatch
 
 jobs:
   build-target-label:
