--- a/.github/workflows/push-containers.yml
+++ b/.github/workflows/push-containers.yml
@@ -1,15 +1,6 @@
 name: Build and Push prebuilt tools container
 
-on:
-  push:
-    paths:
-      - 'include/version.mk'
-      - 'include/cmake.mk'
-      - 'tools/**'
-      - '.github/workflows/push-containers.yml'
-      - 'toolchain/**'
-    branches-ignore:
-      - master
+on: workflow_dispatch
 
 permissions:
   contents: read
