--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -1,18 +1,6 @@
 name: Build host tools
 
-on:
-  pull_request:
-    paths:
-      - 'include/**'
-      - 'tools/**'
-      - '.github/workflows/tools.yml'
-  push:
-    paths:
-      - 'include/**'
-      - 'tools/**'
-      - '.github/workflows/tools.yml'
-    branches-ignore:
-      - master
+on: workflow_dispatch
 
 permissions:
   contents: read
